@@ -1,10 +1,10 @@
-name    = Params-CheckCompiler
+name    = Params-ValidationCompiler
 author  = Dave Rolsky <autarch@urth.org>
 license = Artistic_2_0
 copyright_holder = Dave Rolsky
 
 [@DROLSKY]
-dist = Params-CheckCompiler
+dist = Params-ValidationCompiler
 ; Used by a test but not required at runtime
 prereqs_skip = Moose::Util::TypeConstraints
 prereqs_skip = Specio
