@@ -1,4 +1,4 @@
-package Params::CheckCompiler::Exceptions;
+package Params::ValidationCompiler::Exceptions;
 
 use strict;
 use warnings;
@@ -6,20 +6,20 @@ use warnings;
 our $VERSION = '0.08';
 
 use Exception::Class (
-    'Params::CheckCompiler::Exception::BadArguments',
-    'Params::CheckCompiler::Exception::Named::Extra' => {
+    'Params::ValidationCompiler::Exception::BadArguments',
+    'Params::ValidationCompiler::Exception::Named::Extra' => {
         fields => ['parameters'],
     },
-    'Params::CheckCompiler::Exception::Named::Required' => {
+    'Params::ValidationCompiler::Exception::Named::Required' => {
         fields => ['parameter'],
     },
-    'Params::CheckCompiler::Exception::Positional::Extra' => {
+    'Params::ValidationCompiler::Exception::Positional::Extra' => {
         fields => [ 'got', 'maximum' ],
     },
-    'Params::CheckCompiler::Exception::Positional::Required' => {
+    'Params::ValidationCompiler::Exception::Positional::Required' => {
         fields => [ 'got', 'minimum' ],
     },
-    'Params::CheckCompiler::Exception::ValidationFailedForMooseTypeConstraint'
+    'Params::ValidationCompiler::Exception::ValidationFailedForMooseTypeConstraint'
         => {
         fields => [qw( parameter value type )],
         },
@@ -27,7 +27,7 @@ use Exception::Class (
 
 1;
 
-# ABSTRACT: Defines exceptions thrown by Params::CheckCompiler
+# ABSTRACT: Defines exceptions thrown by Params::ValidationCompiler
 
 __END__
 
@@ -35,27 +35,27 @@ __END__
 
 This module defines the following exceptions:
 
-=head2 Params::CheckCompiler::Exception::BadArguments
+=head2 Params::ValidationCompiler::Exception::BadArguments
 
 Exception thrown when @_ does not contain a hash or hashref.
 
-=head2 Params::CheckCompiler::Exception::Named::Extra
+=head2 Params::ValidationCompiler::Exception::Named::Extra
 
 Exception thrown when @_ contains unexpected extra named arguments.
 
-=head2 Params::CheckCompiler::Exception::Named::Required
+=head2 Params::ValidationCompiler::Exception::Named::Required
 
 Exception thrown when a required named parameter is not passed.
 
-=head2 Params::CheckCompiler::Exception::Positional::Extra.
+=head2 Params::ValidationCompiler::Exception::Positional::Extra.
 
 Exception thrown when @_ contains unexpected extra arguments.
 
-=head2 Params::CheckCompiler::Exception::Positional::Required
+=head2 Params::ValidationCompiler::Exception::Positional::Required
 
 Exception thrown when a required positional parameter is not passed.
 
-=head2 Params::CheckCompiler::Exception::ValidationFailedForMooseTypeConstraint
+=head2 Params::ValidationCompiler::Exception::ValidationFailedForMooseTypeConstraint
 
 Exception thrown when a Moose type constraint check fails. This class provides
 the following methods:
