@@ -5,7 +5,7 @@ use Test2::Bundle::Extended;
 use Test2::Plugin::NoWarnings;
 use Test2::Require::Module 'Specio' => '0.14';
 
-use Params::CheckCompiler qw( validation_for );
+use Params::ValidationCompiler qw( validation_for );
 use Specio::Declare;
 use Specio::Library::Builtins;
 
