@@ -1,7 +1,7 @@
 [PerlCritic]
 select = **/*.{pl,pm,t,psgi}
 ignore = .build/**/*
-ignore = Params-CheckCompiler-*/**/*
+ignore = Params-ValidationCompiler-*/**/*
 ignore = blib/**/*
 ignore = t/00-*
 ignore = t/author-*
@@ -12,7 +12,7 @@ argv = --profile=$ROOT/perlcriticrc
 [PerlTidy]
 select = **/*.{pl,pm,t,psgi}
 ignore = .build/**/*
-ignore = Params-CheckCompiler-*/**/*
+ignore = Params-ValidationCompiler-*/**/*
 ignore = blib/**/*
 ignore = t/00-*
 ignore = t/author-*
@@ -23,7 +23,7 @@ argv = --profile=$ROOT/perltidyrc
 [Test::Vars]
 select = **/*.pm
 ignore = .build/**/*
-ignore = Params-CheckCompiler-*/**/*
+ignore = Params-ValidationCompiler-*/**/*
 ignore = blib/**/*
 ignore = t/00-*
 ignore = t/author-*
